src/main/kotlin/com/example/address_project/global/error/ErrorCode.kt
package com.example.address_project.global.error

enum class ErrorCode(
    val status: Int,
    val message: String
) {
}